Fix paragraph not wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ header {
 
 .card p {
   font-size: 1.5rem;
-  width: 55ch;
+  max-width: 55ch;
 }
 
 .food-images {
